--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,4 @@ hfweather:
   get-url: https://devapi.qweather.com/v7/weather/now?location=code&key=${hfweather.key}&gzip=n
   city-url: https://geoapi.qweather.com/v2/city/lookup?location=cityName&key=${hfweather.key}&number=1&gzip=n
   plugin-url: https://widget-page.qweather.net/h5/index.html?md=0531246&bg=1&lc=accu&key=7e8db955560a4c039db1010ec54ceadd&v=_1635759709176
+  rain-url: https://devapi.qweather.com/v7/weather/24h?location=cityName&key=${hfweather.key}
