修改打包配置

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <finalName>${project.name}</finalName>
                 </configuration>
             </plugin>
         </plugins>
