--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,15 @@ qywx:
 #和风天气
 hfweather:
   key: 79e0081b48bb4f8d87f4a9a338e5cc34
+  #实时天气
   get-url: https://devapi.qweather.com/v7/weather/now?location=code&key=${hfweather.key}
+  #城市信息
   city-url: https://geoapi.qweather.com/v2/city/lookup?location=cityName&key=${hfweather.key}&number=1
+  #天气插件
   plugin-url: https://widget-page.qweather.net/h5/index.html?md=0531246&bg=1&lc=accu&key=7e8db955560a4c039db1010ec54ceadd&v=_1635759709176
-  rain-url: https://devapi.qweather.com/v7/weather/24h?location=cityName&key=${hfweather.key}
+  #24h天气
+  hour-url: https://devapi.qweather.com/v7/weather/24h?location=code&key=${hfweather.key}
+  # 穿衣指数  type=3
+  index-url: https://devapi.qweather.com/v7/indices/1d?type=3&location=code&key=${hfweather.key}
+  # 天气预警
+  warn-url: https://devapi.qweather.com/v7/warning/now?location=code&key=${hfweather.key}
