--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,9 +17,9 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
 
 qywx:
-  corpid:
-  corpsecret:
-  agentid:
+  corpid: ww43a3e50e6f5189a4
+  corpsecret: V1TiAK4gQ00xNImsfPupVnhmPwGYjABK2p-5e2wdXqQ
+  agentid: 1000002
 
 hfweather:
-  key:
+  key: 79e0081b48bb4f8d87f4a9a338e5cc34
