--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/weather?characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&autoReconnect=true&allowMultiQueries=true
+    url: jdbc:mysql://192.168.3.3:3306/weather?characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&autoReconnect=true&allowMultiQueries=true
     username: root
     password: root
   redis:
-    host: 127.0.0.1 # Redis服务器地址
+    host: 192.168.3.3 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
@@ -17,9 +17,9 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
 
 qywx:
-  corpid:
-  corpsecret:
-  agentid:
+  corpid: ww43a3e50e6f5189a4
+  corpsecret: V1TiAK4gQ00xNImsfPupVnhmPwGYjABK2p-5e2wdXqQ
+  agentid: 1000002
 
 hfweather:
-  key:
+  key: 79e0081b48bb4f8d87f4a9a338e5cc34
