--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,10 @@
             <artifactId>hutool-all</artifactId>
             <version>5.7.21</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
