--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 6666
+  port: 8080
 spring:
   profiles:
     active: dev
@@ -20,9 +20,16 @@ qywx:
   corpid:
   corpsecret:
   agentid:
+  # 获取token
   token-url: https://qyapi.weixin.qq.com/cgi-bin/gettoken?corpid=${qywx.corpid}&corpsecret=${qywx.corpsecret}
+  # 发送消息
   send-url: https://qyapi.weixin.qq.com/cgi-bin/message/send?access_token=ACCESS_TOKEN
-  label-url: https://qyapi.weixin.qq.com/cgi-bin/tag/list?access_token=ACCESS_TOKEN
+  label:
+    # 创建标签
+    create-url: https://qyapi.weixin.qq.com/cgi-bin/tag/create?access_token=ACCESS_TOKEN
+    # 获取标签
+    list-url: https://qyapi.weixin.qq.com/cgi-bin/tag/list?access_token=ACCESS_TOKEN
+
 
 #和风天气
 hfweather:
@@ -30,9 +37,7 @@ hfweather:
   #实时天气
   get-url: https://devapi.qweather.com/v7/weather/now?location=code&key=${hfweather.key}
   #城市信息
-  city-url: https://geoapi.qweather.com/v2/city/lookup?location=cityName&key=${hfweather.key}&number=1
-  #天气插件
-  plugin-url: https://widget-page.qweather.net/h5/index.html?md=0531246&bg=1&lc=accu&key=7e8db955560a4c039db1010ec54ceadd&v=_1635759709176
+  city-url: https://geoapi.qweather.com/v2/city/lookup?range=cn&location=cityName&key=${hfweather.key}&number=1
   #24h天气
   hour-url: https://devapi.qweather.com/v7/weather/24h?location=code&key=${hfweather.key}
   # 穿衣指数  type=3
@@ -41,9 +46,3 @@ hfweather:
   warn-url: https://devapi.qweather.com/v7/warning/now?location=code&key=${hfweather.key}
   # 3天天气
   day-url: https://devapi.qweather.com/v7/weather/3d?location=code&key=${hfweather.key}
-
-# http://www.apihubs.cn/#/holiday 判断工作日接口
-holiday:
-  date-url: https://api.apihubs.cn/holiday/get?field=workday&date=dateStr&cn=1&page=1&size=1
-
-
