--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.17.0</version>
         </dependency>
         <!-- MyBatis-plus 生成器 -->
         <dependency>
@@ -113,6 +115,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -150,7 +157,8 @@
                     <dockerHost>${docker.host}</dockerHost>
                     <!--                    <baseImage>java:8</baseImage>-->
                     <baseImage>houwm/jdk8:arm64</baseImage>
-                    <entryPoint>["java", "-jar", "-Dspring.profiles.active=prod","/${project.build.finalName}.jar","-Xms512m -Xmx512m"]
+                    <entryPoint>["java", "-jar",
+                        "-Dspring.profiles.active=prod","/${project.build.finalName}.jar","-Xms512m -Xmx512m"]
                     </entryPoint>
                     <resources>
                         <resource>
