添加数据缓存

--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,7 @@
                     <dockerHost>${docker.host}</dockerHost>
                     <!--                    <baseImage>java:8</baseImage>-->
                     <baseImage>houwm/jdk8:arm64</baseImage>
+                    <!--注意这里不能换行 -->
                     <entryPoint>["java", "-jar", "-Dspring.profiles.active=prod","/${project.build.finalName}.jar","-Xms512m -Xmx512m"]
                     </entryPoint>
                     <resources>
