--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,14 @@ spring:
       org.quartz.scheduler.instance-id: AUTO
       org.quartz.scheduler.instance-name: weather_scheduler
       org.quartz.job-store.class: org.quartz.impl.jdbcjobstore.JobStoreTX
+  # 缓存
+  cache:
+    type: redis
+    redis:
+      time-to-live: 3600000
+      cache-null-values: true
+      use-key-prefix: true
+      key-prefix: cache_
 
 mybatis-plus:
   mapper-locations:
