优化代码逻辑

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -89,5 +89,8 @@ hfweather:
   # 3天天气
   day-url: https://devapi.qweather.com/v7/weather/3d?location=code&key=${hfweather.key}
 
+holiday:
+  url: https://natescarlet.coding.net/p/github/d/holiday-cn/git/raw/master/{year}.json
+
 swagger:
   enable: true
