--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -10,13 +10,13 @@
     </parent>
     <groupId>com.yh</groupId>
     <artifactId>weather-push</artifactId>
-    <version>1.0.0-RELEASE</version>
+    <version>1.0.1-RELEASE</version>
     <name>weather-push</name>
     <description>weather-push</description>
     <properties>
         <java.version>1.8</java.version>
         <docker.maven.plugin.version>1.2.2</docker.maven.plugin.version>
-<!--        <docker.host>http://127.0.0.1:2376</docker.host>-->
+        <!--        <docker.host>http://127.0.0.1:2376</docker.host>-->
         <log4j2.version>2.15.0</log4j2.version>
         <docker.repository.registry>registry.cn-hangzhou.aliyuncs.com</docker.repository.registry>
         <docker.repository.namespace>yh123</docker.repository.namespace>
@@ -135,6 +135,12 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.5.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>3.0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -153,35 +159,35 @@
             </plugin>
 
             <!-- dockerfile maven -->
-<!--            <plugin>-->
-<!--                <groupId>com.spotify</groupId>-->
-<!--                <artifactId>dockerfile-maven-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>default</id>-->
-<!--                        <goals>-->
-<!--                            <goal>build</goal>-->
-<!--                            <goal>push</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                &lt;!&ndash;docker镜像相关的配置信息&ndash;&gt;-->
-<!--                <configuration>-->
-<!--                    <contextDirectory>${project.basedir}</contextDirectory>-->
-<!--                    <dockerfile>Dockerfile</dockerfile>-->
-<!--                    &lt;!&ndash;使用username和password标签，也可以使用useMavenSettingsForAuth，在settings.xml文件中的配置 servers&ndash;&gt;-->
-<!--                    <useMavenSettingsForAuth>false</useMavenSettingsForAuth>-->
-<!--                    <username>xxx</username>-->
-<!--                    <password>xxx</password>-->
-<!--                    <repository>${docker.repository.registry}/${docker.repository.namespace}/${project.artifactId}</repository>-->
-<!--                    <tag>${project.version}</tag>-->
-<!--                    <buildArgs>-->
-<!--                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>-->
-<!--                    </buildArgs>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>com.spotify</groupId>-->
+            <!--                <artifactId>dockerfile-maven-plugin</artifactId>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>default</id>-->
+            <!--                        <goals>-->
+            <!--                            <goal>build</goal>-->
+            <!--                            <goal>push</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--                &lt;!&ndash;docker镜像相关的配置信息&ndash;&gt;-->
+            <!--                <configuration>-->
+            <!--                    <contextDirectory>${project.basedir}</contextDirectory>-->
+            <!--                    <dockerfile>Dockerfile</dockerfile>-->
+            <!--                    &lt;!&ndash;使用username和password标签，也可以使用useMavenSettingsForAuth，在settings.xml文件中的配置 servers&ndash;&gt;-->
+            <!--                    <useMavenSettingsForAuth>false</useMavenSettingsForAuth>-->
+            <!--                    <username>xxx</username>-->
+            <!--                    <password>xxx</password>-->
+            <!--                    <repository>${docker.repository.registry}/${docker.repository.namespace}/${project.artifactId}</repository>-->
+            <!--                    <tag>${project.version}</tag>-->
+            <!--                    <buildArgs>-->
+            <!--                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>-->
+            <!--                    </buildArgs>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 
