--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,8 @@
     </dependencies>
 
     <build>
+            <!-- 产生的构件的文件名，默认值是${artifactId}-${version}。 -->
+        <finalName>projectname</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
