--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql8.default.svc.cluster.local:3306/weather?characterEncoding=utf-8&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true&useSSL=false&autoReconnect=true&allowMultiQueries=true&rewriteBatchedStatements=true
+    url: jdbc:mysql://mysql8.db-system.svc.cluster.local:3306/weather?characterEncoding=utf-8&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true&useSSL=false&autoReconnect=true&allowMultiQueries=true&rewriteBatchedStatements=true
     username: root
     password: root
   redis:
-    host: redis-master.default.svc.cluster.local # Redis服务器地址
+    host: redis-master.db-system.svc.cluster.local # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: root # Redis服务器连接密码（默认为空）
