--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.6</version>
+    <version>2.5.7</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.yh</groupId>
@@ -17,8 +17,6 @@
     <java.version>1.8</java.version>
     <docker.maven.plugin.version>1.2.2</docker.maven.plugin.version>
     <log4j2.version>2.15.0</log4j2.version>
-    <docker.repository.registry>registry.cn-hangzhou.aliyuncs.com</docker.repository.registry>
-    <docker.repository.namespace>yh123</docker.repository.namespace>
   </properties>
 
   <dependencies>
@@ -104,12 +102,12 @@
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.7.0</version>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.7.0</version>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>cn.hutool</groupId>
@@ -141,6 +139,13 @@
       <artifactId>jasypt-spring-boot-starter</artifactId>
       <version>3.0.4</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <version>3.0.8</version>
+    </dependency>
+
   </dependencies>
 
   <build>
