--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,42 +54,31 @@ qywx:
   push-secret:
   other-secret:
   agentid:
-  domain: https://qyapi.weixin.qq.com
+  base-url: https://qyapi.weixin.qq.com/cgi-bin
   # 获取token
-  token-url: ${qywx.domain}/cgi-bin/gettoken?corpid=${qywx.corpid}&corpsecret=SECRET
+  token-url: ${qywx.base-url}/gettoken?corpid=${qywx.corpid}&corpsecret=SECRET
   # 发送消息
-  send-url: ${qywx.domain}/cgi-bin/message/send?access_token=ACCESS_TOKEN
+  send-url: ${qywx.base-url}/message/send?access_token=ACCESS_TOKEN
   tag:
     # 创建标签
-    create-url: ${qywx.domain}/cgi-bin/tag/create?access_token=ACCESS_TOKEN
+    create-url: ${qywx.base-url}/tag/create?access_token=ACCESS_TOKEN
     # 获取标签
-    list-url: ${qywx.domain}/cgi-bin/tag/list?access_token=ACCESS_TOKEN
-    delete-url: ${qywx.domain}/cgi-bin/tag/delete?access_token=ACCESS_TOKEN&tagid=TAG_ID
-    add-tag-user-url: ${qywx.domain}/cgi-bin/tag/addtagusers?access_token=ACCESS_TOKEN
-    del-tag-user-url: ${qywx.domain}/cgi-bin/tag/deltagusers?access_token=ACCESS_TOKEN
+    list-url: ${qywx.base-url}/tag/list?access_token=ACCESS_TOKEN
+    delete-url: ${qywx.base-url}/tag/delete?access_token=ACCESS_TOKEN&tagid=TAG_ID
+    add-tag-user-url: ${qywx.base-url}/tag/addtagusers?access_token=ACCESS_TOKEN
+    del-tag-user-url: ${qywx.base-url}/tag/deltagusers?access_token=ACCESS_TOKEN
   member:
     # 获取加入企业二维码
-    join-qrcode-url: ${qywx.domain}/cgi-bin/corp/get_join_qrcode?access_token=ACCESS_TOKEN
+    join-qrcode-url: ${qywx.base-url}/corp/get_join_qrcode?access_token=ACCESS_TOKEN
     # 获取部门成员 department_id：获取的部门id（1-根部门）； fetch_child：是否递归获取子部门下面的成员：1-递归获取，0-只获取本部门
-    simple-list-url: ${qywx.domain}/cgi-bin/user/simplelist?access_token=ACCESS_TOKEN&department_id=1&fetch_child=1
-    tag-member-list: ${qywx.domain}/cgi-bin/tag/get?access_token=ACCESS_TOKEN&tagid=TAGID
+    simple-list-url: ${qywx.base-url}/user/simplelist?access_token=ACCESS_TOKEN&department_id=1&fetch_child=1
+    tag-member-list: ${qywx.base-url}/tag/get?access_token=ACCESS_TOKEN&tagid=TAGID
 
-#和风天气
-hfweather:
-  key:
-  domain: https://devapi.qweather.com
-  #实时天气
-  get-url: ${hfweather.domain}/v7/weather/now?location=code&key=${hfweather.key}
-  #城市信息
-  city-url: https://geoapi.qweather.com/v2/city/lookup?range=cn&location=cityName&key=${hfweather.key}&number=1
-  #24h天气
-  hour-url: ${hfweather.domain}/v7/weather/24h?location=code&key=${hfweather.key}
-  # 穿衣指数  type=3
-  index-url: ${hfweather.domain}/v7/indices/1d?type=3&location=code&key=${hfweather.key}
-  # 天气预警
-  warn-url: ${hfweather.domain}/v7/warning/now?location=code&key=${hfweather.key}
-  # 3天天气
-  day-url: ${hfweather.domain}/v7/weather/3d?location=code&key=${hfweather.key}
+# 和风天气
+hf-weather:
+  base-url: https://devapi.qweather.com
+  # 城市搜索
+  city-url: https://geoapi.qweather.com/v2/city/lookup?range=cn&location=cityName&key=${hf-weather.key}&number=1
 
 holiday:
   url: https://cdn.jsdelivr.net/gh/NateScarlet/holiday-cn@master
