--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,6 +10,12 @@ spring:
       port: 6379 # Redis服务器连接端口
       password: root # Redis服务器连接密码（默认为空）
       timeout: 3000ms # 连接超时时间（毫秒）
+  cloud:
+    openfeign:
+      client:
+        config:
+          default:
+            logger-level: FULL
 
 sa-token:
   # jwt秘钥
